Innocuous housekeeping changes in the partially determined haplotypes code (#8361)